[tool.poetry]
name = "volcano"
version = "0.1.0"
description = "Volcano ML mini project"
authors = ["Ian Ellis <iellis@minevaluation.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
tsfresh = "^0.21.0"
scipy = "^1.14.1"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"
lightgbm = "^4.5.0"
xgboost = "^3.0.0"
lazypredict = "^0.2.16"
ipykernel = "^6.29.5"
setuptools = "^75.3.0"
numpy = "2.2.6"
iprogress = "^0.4"
ipywidgets = "^8.1.7"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
